--- a/packages/manager/apps/web/client/app/domain/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/domain/translations/Messages_fr_FR.json
@@ -1,4 +1,36 @@
 {
   "domains_title": "Noms de domaine",
-  "domains_order": "Commander"
+  "domains_order": "Commander",
+  "domains_column_domain": "Nom de domaine",
+  "domains_column_domains_status": "Statut",
+  "domains_column_domains_tech_state": "État technique",
+  "domains_column_domains_transfer_state": "Protection contre le transfert",
+  "domains_column_domains_whois_owner": "ID du propriétaire",
+  "domains_column_domains_offer": "Offre",
+  "domains_column_domains_name_server_type": "DNS type",
+  "domains_status": "Statut",
+  "domains_tech_state": "État technique",
+  "domains_create": "Enregistrement en cours",
+  "domains_incoming_transfer": "Transfert entrant",
+  "domains_status_ok": "Enregistré",
+  "domains_status_expired": "Expiré",
+  "domains_status_restorable": "Restaurable",
+  "domains_status_deleted": "Supprimé",
+  "domains_status_pending_delete": "Supprimé",
+  "domains_status_outgoing_transfer": "Transfert sortant",
+  "domains_status_dispute": "Procédure en cours",
+  "domains_tech_state_not_suspended": "Actif",
+  "domains_tech_state_suspended": "Inactif",
+  "domains_tech_state_locked": "Protégé",
+  "domains_tech_state_unlocked": "Déprotégé",
+  "domains_tech_state_unavailable": "Non applicable",
+  "domains_dns_type_hosted": "Chez OVHcloud",
+  "domains_dns_type_external": "Hors OVHcloud",
+  "domains_status_tooltip_expired": "Le nom de domaine est suspendu, vous pouvez le renouveler",
+  "domains_status_tooltip_restorable": "Le nom de domaine est en cours de suppression, vous pouvez le restaurer",
+  "domains_status_tooltip_not_suspended": "Les serveur DNS sont déclarés au registre",
+  "domains_status_tooltip_suspended": "Les serveur DNS ne sont pas déclarés au registre",
+  "domains_status_tooltip_locked": "Le domaine est protégé contre le transfert",
+  "domains_status_tooltip_unlocked": "Le domaine n'est pas protégé contre le transfert",
+  "domains_status_tooltip_dispute": "Le nom de domaine fait l'object d'une procédure administrative ou judiciaire"
 }
