--- a/packages/manager/apps/dedicated/client/app/otrs/components/otrs-grid/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/otrs/components/otrs-grid/translations/Messages_en_GB.json
@@ -10,7 +10,7 @@
   "ovhManagerSupport_tickets_grid_action_goToTicket": "See more information",
   "ovhManagerSupport_ticket_serviceName_none": "Another service",
   "ovhManagerSupport_ticket_state_closed": "Closed",
-  "ovhManagerSupport_ticket_state_open": "In progress",
+  "ovhManagerSupport_ticket_state_open": "Running",
   "ovhManagerSupport_ticket_state_unknown": "Unknown",
   "ovhManagerSupport_ticket_type_criticalIntervention": "Critical intervention",
   "ovhManagerSupport_ticket_type_genericRequest": "Generic request",
