feat(storage.cold-archive): pr fixes
ref: MANAGER-10675
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/flush-archive/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/flush-archive/translations/Messages_fr_FR.json
@@ -5,7 +5,8 @@
   "pci_projects_project_storages_containers_container_cold_archive_flush_submit_label": "Confirmer",
   "pci_projects_project_storages_containers_container_cold_archive_flush_cancel_label": "Annuler",
   "pci_projects_project_storages_containers_container_cold_archive_flush_archive_erase_message": "Toutes les données sur le conteneur d'archive {{containerName}} seront perdues.",
-  "pci_projects_project_storages_containers_container_cold_archive_flush_archive_status_archived_restored_warning": "Votre archive {{containerName}} contient {{objetsCount}} objet(s).</br>Vous êtes sur le point de vider l'archive de tout son contenu.",
+  "pci_projects_project_storages_containers_container_cold_archive_flush_archive_status_archived_restored_warning_1": "Votre archive {{containerName}} contient {{objetsCount}} objet(s).",
+  "pci_projects_project_storages_containers_container_cold_archive_flush_archive_status_archived_restored_warning_2": "Vous êtes sur le point de vider l'archive de tout son contenue.",
   "pci_projects_project_storages_containers_container_cold_archive_flush_success_message": "L'archive {{ containerName }} a été vidée avec success.",
   "pci_projects_project_storages_containers_container_cold_archive_flush_error_delete": "Une erreur est survenue lors de la suppression du contenu de l'archive {{ containerName }} : {{ message }}."
 }
