--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/delete-container/translations/Messages_fr_FR.json
@@ -4,7 +4,8 @@
   "pci_projects_project_storages_containers_container_cold_archive_delete_terminate_input_label": "Entrez \"TERMINATE\" dans le champ ci-dessous pour confirmer",
   "pci_projects_project_storages_containers_container_cold_archive_delete_submit_label": "Confirmer",
   "pci_projects_project_storages_containers_container_cold_archive_delete_cancel_label": "Annuler",
-  "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_archived_or_restored_warning": "Votre archive {{containerName}} contient encore {{objetsCount}} objet(s).</br>Pour supprimer votre archive, il faut d'abord supprimer les objets. Consultez notre <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guide pour gérer les objects d'une archive avec AWS CLI</a>.",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_1": "Votre archive {{containerName}} contient encore {{objetsCount}} objet(s).",
+  "pci_projects_project_storages_containers_container_cold_archive_delete_archive_status_active_warning_2": "Pour supprimer votre archive, il faudrait d'abord supprimer les objets. Consultez notre <a class=\"oui-link oui-link_icon\" href=\"{{ docUrl }}\" target=\"_blank\" rel=\"noopener\">guide pour gérer les objects d'une archive avec AWS CLI</a>.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_success_message": "Le conteneur {{ containerName }} a été supprimé.",
   "pci_projects_project_storages_containers_container_cold_archive_delete_error_delete": "Une erreur est survenue lors de la suppression du conteneur {{ containerName }} : {{ message }}."
 }
