--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
@@ -1116,13 +1116,13 @@
   "server_configuration_monitoring_status_tooltip_proactive": "Richiesta di intervento nel datacenter",
   "server_configuration_monitoring_status_tooltip_no-proactive": " Nessuna richiesta di intervento nel datacenter",
   "server_configuration_monitoring_update_modal_title": "Monitoraggio",
-  "server_configuration_monitoring_update_modal_intro": "Il monitoring SD corrisponde a un ping ICMP realizzato sul server per verificare lo stato della connettività.",
+  "server_configuration_monitoring_update_modal_intro": "Il monitoraggio del tuo server dedicato corrisponde a un ping ICMP realizzato sulla macchina per testare lo stato della connettività.",
   "server_configuration_monitoring_update_modal_status_disabled": "Disattivato",
   "server_configuration_monitoring_update_modal_status_proactive": "Attivato con intervento proattivo",
   "server_configuration_monitoring_update_modal_status_no-proactive": "Attivato senza intervento proattivo",
   "server_configuration_monitoring_update_modal_description_status_disabled": "Il server non è monitorato e in caso di incidente non riceverai alcun alert da parte di OVHcloud.",
-  "server_configuration_monitoring_update_modal_description_status_proactive": "Il server è monitorato e riceverai alert via email all'indirizzo associato al tuo NIC Tech. In caso di alert, darai il consenso all’intervento diretto di OVHcloud sulla macchina. Un ticket di supporto viene creato automaticamente perché tu possa monitorare questo intervento.",
-  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Il server è monitorato e riceverai alert via email all'indirizzo associato al tuo NIC Tech. OVHcloud non interverrà sulla macchina senza una richiesta diretta da parte tua.",
+  "server_configuration_monitoring_update_modal_description_status_proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. In caso di alert, sarà necessario dare il consenso per autorizzare OVHcloud a intervenire direttamente sulla macchina. Un ticket di supporto verrà creato automaticamente per consentirti di seguire lo stato dell’operazione.",
+  "server_configuration_monitoring_update_modal_description_status_no-proactive": "Il tuo server è monitorato e riceverai eventuali notifiche via email all'indirizzo associato all'identificativo del contatto tecnico. OVHcloud non interverrà sulla macchina senza una richiesta diretta da parte tua.",
   "server_configuration_monitoring_update_modal_update_proactive_request_success": "Gli interventi sul server {{serverName}} sono attivi.",
   "server_configuration_monitoring_update_modal_update_no-proactive_request_success": "Gli interventi sono disattivati sul server {{serverName}}.",
   "server_configuration_monitoring_update_modal_update_request_failed": "Si è verificato un errore durante la modifica dell'opzione di monitoring.",
