--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
@@ -45,15 +45,7 @@
   "pci_projects_project_instances_add_privateNetwork_add": "Create a new private network",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "We have detected a Gateway within the private network selected. Since the Gateway is not compatible with the network mode concerned, this may result in unexpected network behaviour.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "If you want to connect an instance to this private network, please select <strong>private mode</strong>.",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Attach a floating IP to this instance",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "To access an instance in private mode, you can attach a floating IP to it. Select one from the list, or create a new one if necessary.",
   "pci_projects_project_instances_add_attach_floating_ip_availability_info": "This option may not be available in the selected region. To learn more about product availability by region, <a href=\"{{ guideLink }}\" target=\"_blank\">click here</a>.",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "The instance will remain private. You can only access it if it has a floating IP address attached to it, or if a separate SSH-Proxy instance is available in your network.",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "For more information, ",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Please refer to this guide",
-  "pci_projects_project_instances_add_create_floating_ip_action": "Create a new floating IP",
-  "pci_projects_project_instances_add_select_floating_ip_label": "Select floating IP",
-  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Your floating IP will be created at the end of the configuration process.",
   "pci_projects_project_instances_add_automated_backup_label": "Automatic instance backup",
   "pci_projects_project_instances_add_automated_backup_recommended": "Recommended",
   "pci_projects_project_instances_add_automated_backup_infos": "You can use this feature to back up your instance automatically, as often as you like.",
@@ -62,6 +54,14 @@
   "pci_projects_project_instances_add_billing_short_period_message": "For short-term usage, we recommend you use hourly billing and then change to monthly billing at a later date, if you switch to more long-term projects. ",
   "pci_projects_project_instances_add_billing_monthly_label": "Monthly",
   "pci_projects_project_instances_add_billing_hourly_label": "Hourly ",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Attach a Floating IP to this instance",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "To access an instance in private mode, you can attach a Floating IP to it. Select one from the list, or create a new one if necessary.",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "The instance will remain private. You can only access it if it has a Floating IP address attached to it, or if a separate SSH-Proxy instance is available in your network.",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "For more information, ",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Please refer to this guide",
+  "pci_projects_project_instances_add_create_floating_ip_action": "Create a new Floating IP",
+  "pci_projects_project_instances_add_select_floating_ip_label": "Select a Floating IP",
+  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Your Floating IP will be created at the end of the configuration process.",
   "pci_projects_project_instances_add_billing_gateway_info": "Missing components detected: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "The flavor selected is:",
   "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Size S",
