--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
@@ -46,8 +46,8 @@
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "Abbiamo rilevato un servizio Gateway all'interno della rete privata selezionata. Questa rete non è compatibile con la modalità scelta e potrebbero quindi verificarsi comportamenti inattesi.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "Per connettere un'istanza a questa rete privata è necessario selezionare la <strong>modalità privata</strong>.",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Associare un Floating IP a questa istanza",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Per accedere a un'istanza in modalità privata è possibile associarla a un Floating IP, selezionandolo dalla lista o creandone uno nuovo se necessario.",
   "pci_projects_project_instances_add_attach_floating_ip_availability_info": "Questa opzione potrebbe non essere disponibile nella Region selezionata. Per maggiori informazioni sulla disponibilità dei servizi per Region, <a href=\"{{ guideLink }}\" target=\"_blank\">clicca qui</a>.",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Per accedere a un'istanza in modalità privata, è possibile associarle un Floating IP selezionandolo dalla lista o creandone uno nuovo se necessario.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "L'istanza resterà privata e sarà possibile accedervi solo se risulta associato un indirizzo Floating IP o se nella rete è disponibile un'istanza SSH-Proxy.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Per ulteriori informazioni, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "consulta questa guida.",
