--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/translations/Messages_fr_FR.json
@@ -4,13 +4,16 @@
   "pci_projects_project_storages_cold_archive_price_link": "Consultez les prix.",
   "pci_projects_project_storages_cold_archive_tabs_tab_archives": "Mes archives",
   "pci_projects_project_storages_cold_archive_tabs_tab_users": "Utilisateurs S3",
-  "pci_projects_project_storages_cold_archives_guides_overview_title": "Présentation du service Cold Archive",
+  "pci_projects_project_storages_cold_archives_guides_storage-backup_title": "Tous les guides de stockage et sauvegarde",
+  "pci_projects_project_storages_cold_archives_guides_storage-backup_description": "Tous les guides de stockage et sauvegarde",
+  "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_title": "Créer un projet public cloud",
+  "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_description": "Créer un projet public cloud",
+  "pci_projects_project_storages_cold_archives_guides_overview_title": "Les caractéristiques de l'offre Cold Archive",
   "pci_projects_project_storages_cold_archives_guides_overview_description": "Découvrez le service, les concepts et la facturation",
   "pci_projects_project_storages_cold_archives_guides_getting-started-with-cold-archive_title": "Premiers pas avec la classe de stockage Cold Archive",
   "pci_projects_project_storages_cold_archives_guides_getting-started-with-cold-archive_description": "Créez des conteneurs, archivez vos données, dégelez vos données, listez les métadonées...",
   "pci_projects_project_storages_cold_archives_guides_manage-your-data_title": "Téléchargez vos données par CLI",
   "pci_projects_project_storages_cold_archives_guides_manage-your-data_description": "Téléchargez vos données par API, CLI ou SDK S3 ",
-
   "pci_projects_project_storages_cold_archive_container_label": "Archives",
   "pci_projects_project_storages_cold_archive_containers_creation_date_label": "Date de création",
   "pci_projects_project_storages_cold_archive_containers_add_container_label": "Créer une archive",
