--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_de_DE.json
@@ -85,7 +85,7 @@
   "ip_filter_services_title_HOSTED_SSL": "Hosted SSL",
   "ip_filter_services_title_PRIVATE_CLOUD": "Hosted Private Cloud (VMware)",
   "ip_filter_services_title_VPS": "Virtual Private Server",
-  "ip_filter_services_title_VRACK": "Privates vRack Netzwerk",
+  "ip_filter_services_title_VRACK": "Privates Netzwerk vRack",
   "ip_filter_services_title_XDSL": "Internet-Angebote",
   "ip_filter_services_title_MAIL": "Mailserver",
   "ip_filter_services_title_CLOUD": "Public Cloud",
@@ -698,7 +698,7 @@
   "ip_table_header_service_help": "OVHcloud-Dienst, dem die IP-Adresse zugewiesen ist. Der Dienst ist über die zugewiesene IP-Adresse zugänglich.",
   "ip_table_header_ip_address_help": "Öffentliche IP-Adresse, die dem Dienst zugewiesen ist.",
   "ip_table_header_country_help": "Ursprungsland der IP-Adresse. Nur für geolokalisierte IP-Adressen (Additional IP) verfügbar.",
-  "ip_table_header_campus_help": "Der Campus legt den Standort der IP-Adresse fest, mit der der Dienst verbunden wird. Im Fall von Additional IPs bestimmt der Campus außerdem den Standort der Dienste, auf die die IP-Adresse übertragen werden kann.",
+  "ip_table_header_campus_help": "Der Campus legt den Standort der IP-Adresse fest, mit der der Dienst verbunden wird. Im Fall von Additional-IPs bestimmt der Campus auch den Standort der Dienste, auf den die IP-Adresse übertragen werden kann.",
   "ip_table_header_reverse_help": "DNS-Eintrag für Reverse-Auflösung (von IP-Adresse zu Hostname).",
   "ip_table_header_virtual_mac_help": "MAC Adresse zum Routen der IP-Adresse auf eine virtualisierte Ressource im Bridge-Modus für kompatible Produkte.",
   "ip_table_header_mitigation_help": "Status des DDoS-Schutzes",
