fix(telecom.sms): fix wording smpp endpoint
ref: MANAGER-10741

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms/components/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sms/src/sms/components/translations/Messages_fr_FR.json
@@ -2,8 +2,8 @@
   "sms_component_smppSettings_title": "Informations générales",
   "sms_component_smppSettings_label_systemId": "SystemID",
   "sms_component_smppSettings_label_secured_endpoint": "Secured Endpoint SMPP",
-  "sms_component_smppSettings_label_unsecured": "Unsecured SMPP",
-  "sms_component_smppSettings_popover_unsecured": "Ce point d'accès n'utilise pas de chiffrement TLS, les données sont visibles par des personnes tierces.",
+  "sms_component_smppSettings_label_unsecured_endpoint": "Unsecured Endpoint SMPP",
+  "sms_component_smppSettings_popover_unsecured_endpoint": "Ce point d'accès n'utilise pas de chiffrement TLS, les données sont visibles par des personnes tierces.",
   "sms_component_smppSettings_label_windowing": "Windowing",
   "sms_component_smppSettings_description_windowing": "{{ value }} messages maximum",
   "sms_component_smppSettings_label_flow_rate_allowed": "Débit autorisé",
