--- a/packages/manager/modules/sms/src/sms/components/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sms/src/sms/components/translations/Messages_fr_FR.json
@@ -21,7 +21,7 @@
   "sms_component_serviceStatus_password_modal_button_primary": "Envoyer",
   "sms_component_serviceStatus_password_modal_button_secondary": "Annuler",
   "sms_component_serviceStatus_password_modal_content_part1": "Vous êtes sur le point de changer votre mot de passe.",
-  "sms_component_serviceStatus_password_modal_content_part2": "Un email va vous être envoyé à l'adresse suivante {{ email }} avec les étapes à suivre.",
-  "sms_component_serviceStatus_password_message_success": "Vous venez de changer votre mot de passe. Un email va vous être envoyé à l'adresse suivante {{ email }} avec les étapes à suivre.",
+  "sms_component_serviceStatus_password_modal_content_part2": "Un e-mail va vous être envoyé à l'adresse suivante {{ email }} avec les étapes à suivre.",
+  "sms_component_serviceStatus_password_message_success": "Vous venez de changer votre mot de passe. Un e-mail va vous être envoyé à l'adresse suivante {{ email }} avec les étapes à suivre.",
   "sms_component_serviceStatus_password_message_error": "Une erreur est survenue, veuillez réessayer ultérieurement."
 }
