--- a/packages/manager/modules/pci/src/components/project/images-list/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/components/project/images-list/translations/Messages_pt_PT.json
@@ -7,7 +7,7 @@
   "pci_project_instances_shapshots": "Backups",
   "pci_project_instances_licence": "A utilização de uma imagem está sujeita à aceitação prévia do Contrato de Licença do Utilizador do fornecedor.",
   "pci_project_instances_distribution_linux": "Linux",
-  "pci_project_instances_distribution_linux_other": "Archlinux",
+  "pci_project_instances_distribution_linux_other": "Arch Linux",
   "pci_project_instances_distribution_centos": "CentOS",
   "pci_project_instances_distribution_coreos": "CoreOS",
   "pci_project_instances_distribution_debian": "Debian",
