fix(apps.web.hosting): avoid html into translation
ref: DTRSD-101301

 Signed-off-by: mohammed-zahaf <mohammed.zahaf.ext@ovhcloud.com>

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
@@ -824,7 +824,8 @@
   "hosting_configuration_tab_modules_create_step1_module_type_select": "Sélectionner le module",
   "hosting_configuration_tab_modules_create_step1_module_advanced_mode": "Installation en mode avancé",
   "hosting_configuration_tab_modules_create_step1_module_domain": "Choisissez le domaine sur lequel installer le module :",
-  "hosting_configuration_tab_modules_create_step1_module_default_path": "Le répertoire d'installation par défaut est <strong>{{t0}}</strong><br> Veuillez sélectionner le mode avancé pour l'installer dans un autre répertoire.",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_1": "Le répertoire d'installation par défaut est {{t0}}.",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_2": "Veuillez sélectionner le mode avancé pour l'installer dans un autre répertoire.",
   "hosting_configuration_tab_modules_create_step1_module_advancedMode_info": "En choisissant le mode avancé, vous pourrez :",
   "hosting_configuration_tab_modules_create_step1_module_advancedMode_info_option1": "Sélectionner la base de données sur laquelle installer le module",
   "hosting_configuration_tab_modules_create_step1_module_advancedMode_info_option2": "Sélectionner le nom et le mot de passe administrateur",
