fix(telecom.sms): change error display on transfer credit
ref: MANAGER-10721

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms/dashboard/creditTransfer/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sms/src/sms/dashboard/creditTransfer/translations/Messages_fr_FR.json
@@ -6,5 +6,5 @@
   "sms_creditTransfer_label_account_to_credit": "Compte à créditer",
   "sms_creditTransfer_label_number_of_credits": "Indiquer le nombre de crédits",
   "sms_creditTransfer_message_success": "Transfert effectué.",
-  "sms_creditTransfer_message_error": "Une erreur est survenue, veuillez réessayer ultérieurement."
+  "sms_creditTransfer_message_error": "Une erreur est survenue : {{error}}"
 }
