--- a/packages/manager/apps/dedicated/client/app/license/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/license/translations/Messages_fr_CA.json
@@ -1208,8 +1208,10 @@
   "license_potential_problem_isWindowsOs": "Le serveur ne semble pas exécuter une version de Windows",
   "license_potential_problem_isOsPleskOnyx": "Le serveur ne semble pas exécuter une distribution Plesk Onyx",
   "license_designation_CPANEL_premier_option": "jusqu'à {{ numberOfCPANEL }} comptes CPANEL",
+  "license_designation_CPANEL_solo_option": "1 compte CPANEL",
   "license_designation_CPANEL_admin_option": "2-5 comptes CPANEL",
   "license_designation_CPANEL_pro_option": "6-30 comptes CPANEL",
+  "license_designation_CPANEL_plus_option": "31-50 comptes CPANEL",
   "license_designation_CPANEL_version_option-cpanel": "jusqu'à {{ licenseCount }} comptes CPANEL",
   "license_designation_SQLSERVER_version_SQL_SERVER_2016_STANDARD_EDITION_14_CORES": "SQL Server 2016 license - Standard edition - 14 cores",
   "license_designation_SQLSERVER_version_SQL_SERVER_2016_WEB_EDITION_14_CORES": "SQL Server 2016 license - Web edition - 14 cores",
