fix: remove unused translations [CDS]
Signed-off-by: CDS <cds@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pl_PL.json
@@ -36,9 +36,9 @@
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "To klasyczny model sieci instancji Public Cloud. Instancje będą miały przypisany publiczny port sieciowy.",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Tryb ten nie jest kompatybilny z nowymi usługami sieciowymi (Load Balancer lub Floating IP).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Tryb prywatny",
-  "pci_projects_project_instances_add_privateNetwork_label": "Wybierz prywatną sieć",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Instancje będą przypisane wyłącznie do sieci prywatnej. Może być ona całkowicie prywatna lub dostępna w Internecie za pośrednictwem usług Gateway lub Load Balancer z adresami Floating IP.",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Pamiętaj, że w przypadku dostępu SSH z Internetu wymagany jest adres Floating IP lub inna instancja (zwana SSH-Proxy).",
+  "pci_projects_project_instances_add_privateNetwork_label": "Wybierz prywatną sieć",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Wybierz sieć prywatną",
   "pci_projects_project_instances_add_privateNetwork_none": "Brak",
   "pci_projects_project_instances_add_privateNetwork_description": "W tym trybie instancja jest przypisana do jednej z lokalnych sieci prywatnych.",
@@ -47,11 +47,13 @@
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "Jeśli chcesz połączyć instancję z tą prywatną siecią, wybierz <strong>tryb prywatny</strong>.",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Przypisz adres Floating IP do tej instancji",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Aby uzyskać dostęp do instancji w trybie prywatnym, możesz przypisać do niej Floating IP. Wybierz adres z listy lub w razie potrzeby utwórz nowy.",
+  "pci_projects_project_instances_add_attach_floating_ip_availability_info": "Ta opcja może nie być dostępna w wybranym regionie. Aby uzyskać więcej informacji na temat dostępności produktów dla każdego regionu, <a href=\"{{ guideLink }}\" target=\"_blank\">kliknij tutaj</a>.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "Instancja pozostanie prywatna. Możesz się do niej zalogować tylko wtedy, gdy zostanie do niej przypisany adres Floating IP lub gdy w Twojej sieci będzie dostępna osobna instancja SSH-Proxy.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Więcej informacji ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Sprawdź przewodnik",
   "pci_projects_project_instances_add_create_floating_ip_action": "Utwórz nowy adres Floating IP",
   "pci_projects_project_instances_add_select_floating_ip_label": "Wybierz adres Floating IP",
+  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Adres Floating IP zostanie utworzony na koniec procesu konfiguracji.",
   "pci_projects_project_instances_add_automated_backup_label": "Automatyczne kopie zapasowe instancji",
   "pci_projects_project_instances_add_automated_backup_recommended": "Zalecane",
   "pci_projects_project_instances_add_automated_backup_infos": "Dzięki tej funkcji możesz automatycznie zapisać instancję w wybranej przez Ciebie kolejności.",
@@ -60,9 +62,10 @@
   "pci_projects_project_instances_add_billing_short_period_message": "W przypadku korzystania z usługi przez krótkie okresy zalecamy wybór rozliczenia godzinowego, a w razie potrzeby przejście na abonament miesięczny.",
   "pci_projects_project_instances_add_billing_monthly_label": "Abonament miesięczny",
   "pci_projects_project_instances_add_billing_hourly_label": "Rozliczenie godzinowe",
-  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Adres Floating IP zostanie utworzony na koniec procesu konfiguracji.",
   "pci_projects_project_instances_add_billing_gateway_info": "Wykryliśmy brakujące komponenty: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "Wybrany flavor to:",
+  "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Rozmiar S",
+  "pci_projects_project_instances_add_billing_gateway_detail_price_monthly": "(w cenie {{gatewayPrice}}/m-c za godzinę)",
   "pci_projects_project_instances_add_billing_gateway_snat_info": "Wykryliśmy użycie istniejącej bramy, ale bez włączonej opcji SNAT. Musimy ją dla Ciebie włączyć",
   "pci_projects_project_instances_add_billing_gateway_DHCP_info": "Wykryliśmy istniejącą bramę, której należy użyć, ale bez ustawionej domyślnej opcji trasy DHCP. Musimy ją dla ciebie włączyć.",
   "pci_projects_project_instances_add_privateNetwork_next": "Dalej",
@@ -71,6 +74,9 @@
   "pci_projects_project_instances_add_cancel_label": "Anuluj",
   "pci_projects_project_instances_add_save_form": "Trwa tworzenie instancji",
   "pci_projects_project_instances_add_save_multiple_form": "Trwa tworzenie instancji",
+  "pci_projects_project_instances_add_instance_confirmation_info": "Jesteś w trakcie tworzenia instancji. Utworzenie tej instancji może zająć kilka minut. Czy chcesz kontynuować?",
+  "pci_projects_project_instances_add_instance_confirmation_create": "Tak.",
+  "pci_projects_project_instances_add_instance_confirmation_cancel": "Nie",
   "pci_projects_project_instances_add_private_mode1": "Trwa tworzenie instancji. Konfiguracja wszystkich komponentów może zająć kilka minut.",
   "pci_projects_project_instances_add_private_mode2": "Prosimy nie opuszczać ani nie odświeżać tej strony, ponieważ może to zaburzyć proces tworzenia instancji.",
   "pci_projects_project_instances_add_success_message": "Instancja {{ instance }} została dodana.",
@@ -83,12 +89,5 @@
   "pci_projects_project_instances_add_modal_add_private_network_field_placeholder": "Wprowadź nazwę prywatnej sieci.",
   "pci_projects_project_instances_add_private_network_select_subnet_label": "Wybierz subnet",
   "pci_projects_project_instances_add_modal_submit_label": "Dodaj",
-  "pci_projects_project_instances_add_modal_cancel_label": "Anuluj",
-  "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Rozmiar S",
-  "pci_projects_project_instances_add_billing_gateway_detail_price_monthly": "(w cenie {{gatewayPrice}}/m-c za godzinę)",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_info": "Ta opcja może nie być dostępna w wybranym regionie. Aby uzyskać więcej informacji na temat dostępności produktów dla każdego regionu, <a href=\"{{ guideLink }}\" target=\"_blank\">kliknij tutaj</a>.",
-  "pci_projects_project_instances_add_instance_confirmation_info": "Jesteś w trakcie tworzenia instancji. Utworzenie tej instancji może zająć kilka minut. Czy chcesz kontynuować?",
-  "pci_projects_project_instances_add_instance_confirmation_create": "Tak.",
-  "pci_projects_project_instances_add_instance_confirmation_cancel": "Nie",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Nie jest dostępne dla tego typu instancji."
+  "pci_projects_project_instances_add_modal_cancel_label": "Anuluj"
 }
