--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/add/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/add/translations/Messages_de_DE.json
@@ -11,8 +11,7 @@
   "dedicatedCloud_USER_AD_ADD_field_label_sslThumbprint": "Fingerprint des SSL-Zertifikats",
   "dedicatedCloud_USER_AD_ADD_field_label_username": "Aktive Directory Nutzerkennung",
   "dedicatedCloud_USER_AD_ADD_field_label_password": "Active Directory Nutzerpasswort",
-  "dedicatedCloud_USER_AD_ADD_field_label_baseDnForUsers": "Base DN für Nutzer",
-  "dedicatedCloud_USER_AD_ADD_field_label_baseDnForGroups": "Base DN für Gruppen",
+  "dedicatedCloud_USER_AD_ADD_field_label_baseDn": "Basis DN für Nutzer und Gruppen",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_domainName": "FQDN",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_domainAlias": "NetBIOS-Name",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_description": "Beschreibung Ihrer Auswahl",
@@ -22,13 +21,10 @@
   "dedicatedCloud_USER_AD_ADD_field_tooltip_sslThumbprint": "Fingerprint des SSL-Zertifikats (SHA1 Fingerprint) des LDAPS Active Directory-Servers.",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_username": "Kennung des Domainnutzers, die für die Verbindung mit dem LDAPS-Server verwendet wird. Kennung „pre-Windows 2000“ in Form eines UPN.",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_password": "Passwort des Domainnutzers, das für die Verbindung mit dem LDAPS-Server verwendet wird.",
-  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDnForUsers": "Hierbei handelt es sich um den DN (Distinguished Name), unter dem die Nutzer gesucht werden.",
-  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDnForGroups": "Hierbei handelt es sich um den DN (Distinguished Name), unter dem die Gruppen gesucht werden.",
+  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDn": "Dies ist der DN (Distinguished Name), unter dem die Nutzer und Gruppen gesucht werden.",
   "dedicatedCloud_USER_AD_ADD_foot_information": "Bitte gestatten Sie Ihrer Hosted Private Cloud den Zugang zu Ihrem Active Directory LDAPS-Server, bevor Sie bestätigen. Diese Einstellung wird in der Konfiguration der Firewall Ihrer Active Directory oder Ihres Unternehmens vorgenommen. Weitere Informationen hierzu finden Sie in unserer Dokumentation:",
   "dedicatedCloud_USER_AD_ADD_submit": "Ausführen",
   "dedicatedCloud_USER_AD_ADD_mendatory_fields": "Felder mit Sternchen (*) sind Pflichtfelder.",
   "dedicatedCloud_USER_AD_ADD_error": "Das Hinzufügen der neuen Active Directory war nicht möglich.",
-  "dedicatedCloud_USER_AD_ADD_button_close": "Schließen",
-  "dedicatedCloud_USER_AD_ADD_field_label_baseDn": "Basis DN für Nutzer und Gruppen",
-  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDn": "Dies ist der DN (Distinguished Name), unter dem die Nutzer und Gruppen gesucht werden."
+  "dedicatedCloud_USER_AD_ADD_button_close": "Schließen"
 }
