--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/add/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/activeDirectories/add/translations/Messages_pl_PL.json
@@ -11,8 +11,7 @@
   "dedicatedCloud_USER_AD_ADD_field_label_sslThumbprint": "„Odcisk palca” certyfikatu SSL",
   "dedicatedCloud_USER_AD_ADD_field_label_username": "Identyfikator użytkownika Active Directory",
   "dedicatedCloud_USER_AD_ADD_field_label_password": "Hasło użytkownika Active Directory",
-  "dedicatedCloud_USER_AD_ADD_field_label_baseDnForUsers": "Baza DN dla użytkowników",
-  "dedicatedCloud_USER_AD_ADD_field_label_baseDnForGroups": "Baza DN dla grup",
+  "dedicatedCloud_USER_AD_ADD_field_label_baseDn": "Baza DN dla użytkowników i grup",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_domainName": "FQDN",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_domainAlias": "Nazwa NetBIOS",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_description": "Opis wyboru",
@@ -22,13 +21,10 @@
   "dedicatedCloud_USER_AD_ADD_field_tooltip_sslThumbprint": "„Odcisk palca” certyfikatu SSL (SHA1 Fingerprint) na serwerze LDAPS Active Directory.",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_username": "Identyfikator użytkownika domeny, który zostanie użyty do połączenia z serwerem LDAPS. Identyfikator \"pre-Windows 2000\" w postaci UPN.",
   "dedicatedCloud_USER_AD_ADD_field_tooltip_password": "Hasło użytkownika domeny, które zostanie użyte do połączenia z serwerem LDAPS.",
-  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDnForUsers": "Jest to DN (Distinguished Name), według którego będą wyszukiwani użytkownicy.",
-  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDnForGroups": "Jest to DN (Distinguished Name), według którego będą wyszukiwane grupy.",
+  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDn": "Jest to DN (Distinguished Name), z którego będą wyszukiwani użytkownicy i grupy.",
   "dedicatedCloud_USER_AD_ADD_foot_information": "Przed zatwierdzeniem upewnij się, że zezwalasz Hosted Private Cloud na dostęp do serwera LDAPS Active Directory. Operacja ta przeprowadzana jest w konfiguracji zapory sieciowej Active Directory lub Twojej firmy. Więcej informacji znajdziesz w dokumentacji:",
   "dedicatedCloud_USER_AD_ADD_submit": "Wykonaj",
   "dedicatedCloud_USER_AD_ADD_mendatory_fields": "Pola oznaczone gwiazdką (*) są obowiązkowe.",
   "dedicatedCloud_USER_AD_ADD_error": "Nie można było dodać nowego Active Directory.",
-  "dedicatedCloud_USER_AD_ADD_button_close": "Zamknij",
-  "dedicatedCloud_USER_AD_ADD_field_label_baseDn": "Baza DN dla użytkowników i grup",
-  "dedicatedCloud_USER_AD_ADD_field_tooltip_baseDn": "Jest to DN (Distinguished Name), z którego będą wyszukiwani użytkownicy i grupy."
+  "dedicatedCloud_USER_AD_ADD_button_close": "Zamknij"
 }
