--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
@@ -36,15 +36,24 @@
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "This is the standard network model for Public Cloud instances. Instances will have a public network port attached.",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Please note that this mode is not compatible for new network services (Load Balancer or Floating IPs).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Private mode",
-  "pci_projects_project_instances_add_privateNetwork_label": "Select a private network",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Instances will only be attached to a private network. It can be either completely private, or exposed to the internet using Gateway or Load Balancer services with Floating IPs.",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Please note that for SSH access from the internet, a Floating IP or another instance (called SSH-Proxy) is required.",
+  "pci_projects_project_instances_add_privateNetwork_label": "Select a private network",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Select a private network",
   "pci_projects_project_instances_add_privateNetwork_none": "None",
   "pci_projects_project_instances_add_privateNetwork_description": "In this mode, the instance is attached to one of the local private networks.",
   "pci_projects_project_instances_add_privateNetwork_add": "Create a new private network",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "We have detected a Gateway within the private network selected. Since the Gateway is not compatible with the network mode concerned, this may result in unexpected network behaviour.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "If you want to connect an instance to this private network, please select <strong>private mode</strong>.",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Attach a Floating IP to this instance",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "To access an instance in private mode, you can attach a Floating IP to it. Select one from the list, or create a new one if necessary.",
+  "pci_projects_project_instances_add_attach_floating_ip_availability_info": "This option may not be available in the selected region. To learn more about product availability by region, <a href=\"{{ guideLink }}\" target=\"_blank\">click here</a>.",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "The instance will remain private. You can only access it if it has a Floating IP address attached to it, or if a separate SSH-Proxy instance is available in your network.",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "For more information, ",
+  "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Please refer to this guide",
+  "pci_projects_project_instances_add_create_floating_ip_action": "Create a new Floating IP",
+  "pci_projects_project_instances_add_select_floating_ip_label": "Select a Floating IP",
+  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Your Floating IP will be created at the end of the configuration process.",
   "pci_projects_project_instances_add_automated_backup_label": "Automatic instance backup",
   "pci_projects_project_instances_add_automated_backup_recommended": "Recommended",
   "pci_projects_project_instances_add_automated_backup_infos": "You can use this feature to back up your instance automatically, as often as you like.",
@@ -53,16 +62,10 @@
   "pci_projects_project_instances_add_billing_short_period_message": "For short-term usage, we recommend you use hourly billing and then change to monthly billing at a later date, if you switch to more long-term projects. ",
   "pci_projects_project_instances_add_billing_monthly_label": "Monthly",
   "pci_projects_project_instances_add_billing_hourly_label": "Hourly ",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Attach a Floating IP to this instance",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "To access an instance in private mode, you can attach a Floating IP to it. Select one from the list, or create a new one if necessary.",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "The instance will remain private. You can only access it if it has a Floating IP address attached to it, or if a separate SSH-Proxy instance is available in your network.",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "For more information, ",
-  "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "Please refer to this guide",
-  "pci_projects_project_instances_add_create_floating_ip_action": "Create a new Floating IP",
-  "pci_projects_project_instances_add_select_floating_ip_label": "Select a Floating IP",
-  "pci_projects_project_instances_add_create_floating_ip_banner_info": "Your Floating IP will be created at the end of the configuration process.",
   "pci_projects_project_instances_add_billing_gateway_info": "Missing components detected: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "The flavor selected is:",
+  "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Size S",
+  "pci_projects_project_instances_add_billing_gateway_detail_price_monthly": "(for {{gatewayPrice}}/month billed per hour)",
   "pci_projects_project_instances_add_billing_gateway_snat_info": "We have detected the use of an existing Gateway, but without the SNAT option enabled. We need to enable it for you.",
   "pci_projects_project_instances_add_billing_gateway_DHCP_info": "We detected an existing Gateway to use, but without the default DHCP route option announced. We need to enable it for you.",
   "pci_projects_project_instances_add_privateNetwork_next": "Next",
@@ -71,6 +74,9 @@
   "pci_projects_project_instances_add_cancel_label": "Cancel",
   "pci_projects_project_instances_add_save_form": "Launching instance",
   "pci_projects_project_instances_add_save_multiple_form": "Launching instances",
+  "pci_projects_project_instances_add_instance_confirmation_info": "You are about to create an Instance. Please note that it may take a few minutes to create this Instance. Do you wish to continue?",
+  "pci_projects_project_instances_add_instance_confirmation_create": "OK - continue",
+  "pci_projects_project_instances_add_instance_confirmation_cancel": "Cancel",
   "pci_projects_project_instances_add_private_mode1": "Your instance is being created. It may take a few minutes to configure all the components.",
   "pci_projects_project_instances_add_private_mode2": "Please do not leave or refresh this page as this may impact the creation process.",
   "pci_projects_project_instances_add_success_message": "{{ instance }} instance has been added",
@@ -83,12 +89,5 @@
   "pci_projects_project_instances_add_modal_add_private_network_field_placeholder": "Enter a private network name",
   "pci_projects_project_instances_add_private_network_select_subnet_label": "Select a subnet",
   "pci_projects_project_instances_add_modal_submit_label": "Add",
-  "pci_projects_project_instances_add_modal_cancel_label": "Exit",
-  "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Size S",
-  "pci_projects_project_instances_add_billing_gateway_detail_price_monthly": "(for {{gatewayPrice}}/month billed per hour)",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_info": "This option may not be available in the selected region. To learn more about product availability by region, <a href=\"{{ guideLink }}\" target=\"_blank\">click here</a>.",
-  "pci_projects_project_instances_add_instance_confirmation_info": "You are about to create an Instance. Please note that it may take a few minutes to create this Instance. Do you wish to continue?",
-  "pci_projects_project_instances_add_instance_confirmation_create": "OK - continue",
-  "pci_projects_project_instances_add_instance_confirmation_cancel": "Cancel",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Not available on this instance type."
+  "pci_projects_project_instances_add_modal_cancel_label": "Exit"
 }
