--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
@@ -47,6 +47,7 @@
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "Per connettere un'istanza a questa rete privata è necessario selezionare la <strong>modalità privata</strong>.",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Associare un Floating IP a questa istanza",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Per accedere a un'istanza in modalità privata, è possibile associarle un Floating IP selezionandolo dalla lista o creandone uno nuovo se necessario.",
+  "pci_projects_project_instances_add_attach_floating_ip_availability_info": "Questa opzione potrebbe non essere disponibile nella Region selezionata. Per maggiori informazioni sulla disponibilità dei servizi per Region, <a href=\"{{ guideLink }}\" target=\"_blank\">clicca qui</a>.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "L'istanza resterà privata e sarà possibile accedervi solo se risulta associato un indirizzo Floating IP o se nella rete è disponibile un'istanza SSH-Proxy.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Per ulteriori informazioni, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "consulta questa guida.",
@@ -63,6 +64,8 @@
   "pci_projects_project_instances_add_billing_hourly_label": "Orario",
   "pci_projects_project_instances_add_billing_gateway_info": "Abbiamo rilevato dei componenti mancanti: <strong>Gateway</strong>",
   "pci_projects_project_instances_add_billing_gateway_detail": "La tipologia selezionata è:",
+  "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Taglia S",
+  "pci_projects_project_instances_add_billing_gateway_detail_price_monthly": "(al prezzo di {{gatewayPrice}}/mese, fatturato su base oraria)",
   "pci_projects_project_instances_add_billing_gateway_snat_info": "Abbiamo rilevato l'utilizzo di un gateway esistente ma senza l'opzione SNAT attivata. OVHcloud dovrà attivarla per te.",
   "pci_projects_project_instances_add_billing_gateway_DHCP_info": "Abbiamo rilevato un gateway esistente da utilizzare ma senza l'opzione di rotta predefinita DHCP selezionata. OVHcloud dovrà attivarla per te.",
   "pci_projects_project_instances_add_privateNetwork_next": "Continua",
@@ -71,6 +74,9 @@
   "pci_projects_project_instances_add_cancel_label": "Annulla",
   "pci_projects_project_instances_add_save_form": "Creazione dell'istanza in corso...",
   "pci_projects_project_instances_add_save_multiple_form": "Creazione delle istanze in corso...",
+  "pci_projects_project_instances_add_instance_confirmation_info": "Stai per creare un'Istanza. Ti ricordiamo che la creazione di questa istanza potrebbe richiedere alcuni minuti. Vuoi davvero continuare?",
+  "pci_projects_project_instances_add_instance_confirmation_create": "Sì",
+  "pci_projects_project_instances_add_instance_confirmation_cancel": "No",
   "pci_projects_project_instances_add_private_mode1": "Creazione dell'istanza in corso... La configurazione di tutti i componenti potrebbe richiedere alcuni minuti.",
   "pci_projects_project_instances_add_private_mode2": "Non chiudere o aggiornare la pagina: questa azione potrebbe avere un impatto sul processo di creazione.",
   "pci_projects_project_instances_add_success_message": "L’istanza {{ instance }} è stata aggiunta.",
@@ -83,12 +89,5 @@
   "pci_projects_project_instances_add_modal_add_private_network_field_placeholder": "Inserisci il nome della rete privata",
   "pci_projects_project_instances_add_private_network_select_subnet_label": "Seleziona una sottorete",
   "pci_projects_project_instances_add_modal_submit_label": "Aggiungi",
-  "pci_projects_project_instances_add_modal_cancel_label": "Annullare",
-  "pci_projects_project_instances_add_billing_gateway_detail_s_size": "Taglia S",
-  "pci_projects_project_instances_add_billing_gateway_detail_price_monthly": "(al prezzo di {{gatewayPrice}}/mese, fatturato su base oraria)",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_info": "Questa opzione potrebbe non essere disponibile nella Region selezionata. Per maggiori informazioni sulla disponibilità dei servizi per Region, <a href=\"{{ guideLink }}\" target=\"_blank\">clicca qui</a>.",
-  "pci_projects_project_instances_add_instance_confirmation_info": "Stai per creare un'Istanza. Ti ricordiamo che la creazione di questa istanza potrebbe richiedere alcuni minuti. Vuoi davvero continuare?",
-  "pci_projects_project_instances_add_instance_confirmation_create": "Sì",
-  "pci_projects_project_instances_add_instance_confirmation_cancel": "No",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Non disponibile su questo tipo di istanza"
+  "pci_projects_project_instances_add_modal_cancel_label": "Annullare"
 }
