fix(i18n): add missing translations [CDS 2043]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
@@ -5,10 +5,10 @@
   "signup_email_in_use": "Per questa email esiste già un account cliente OVHcloud.",
   "signup_password_invalid": "Deve contenere almeno una cifra, una lettera maiuscola e una minuscola ed essere costituita da 8 o più caratteri.",
   "signup_section_account": "Il tuo account",
-  "signup_section_personal": "Informazioni personali",
-  "signup_section_contact": "I tuoi dati",
+  "signup_section_personal": "I tuoi dati personali",
+  "signup_section_contact": "Le tue informazioni di contatto",
   "signup_section_other": "Ulteriori informazioni",
-  "signup_field_date_placeholder": "aaaa-mm-gg",
+  "signup_field_date_placeholder": "gg/mm/aaaa",
   "signup_field_date_calendar": "Scegli la data",
   "signup_field_legalform": "Tipo di account",
   "signup_field_country": "Paese",
@@ -746,5 +746,18 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "Bengala Occidentale"
+  "signup_enum_IN_area_IN-WB": "Bengala Occidentale",
+  "signup_section_identification": "Il tuo identificativo cliente",
+  "signup_section_activity": "Attività",
+  "signup_section_language": "Preferenze di lingua",
+  "signup_field_required_error": "Completa questo campo",
+  "signup_field_pattern_error": "Inserisci un formato valido",
+  "signup_enum_managerLanguage_de_DE": "Tedesco",
+  "signup_enum_managerLanguage_en_GB": "Inglese",
+  "signup_enum_managerLanguage_es_ES": "Spagnolo",
+  "signup_enum_managerLanguage_fr_FR": "Francese",
+  "signup_enum_managerLanguage_fr_CA": "Francese (Canada)",
+  "signup_enum_managerLanguage_pl_PL": "Polacco",
+  "signup_enum_managerLanguage_it_IT": "Italiano",
+  "signup_enum_managerLanguage_pt_PT": "Portoghese"
 }
