--- a/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_en_GB.json
@@ -32,7 +32,7 @@
   "user_account_spareemail_info": "We strongly recommend entering an alternative email address to the previous one.",
   "user_account_customer_code": "Customer code",
   "user_account_cancel": "Cancel",
-  "user_account_OK": "Validate",
+  "user_account_OK": "Save changes",
   "user_account_info_error": "An error has occurred:",
   "user_account_info_error_on_change_email": "An error has occurred updating the primary email address:",
   "subscriptions_title": "Subscriptions",
@@ -600,7 +600,7 @@
   "user_account_security_ip_restrictions_alt": "IP access restriction",
   "user_account_title_infos": "My account",
   "user_account_title_subscriptions": "My subscriptions",
-  "user_agreements_accepting": "In progress",
+  "user_agreements_accepting": "Saving...",
   "user_account_emails_title": "Emails received",
   "user_account_title_dashboard": "General information",
   "user_account_support_level_title": "Level of Support",
