--- a/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_es_ES.json
@@ -32,7 +32,7 @@
   "user_account_spareemail_info": "Es recomendable indicar una dirección de correo electrónico alternativa a la dirección anterior.",
   "user_account_customer_code": "Número de cliente",
   "user_account_cancel": "Cancelar",
-  "user_account_OK": "Confirmar",
+  "user_account_OK": "Guardar los cambios",
   "user_account_info_error": "Se ha producido un error:",
   "user_account_info_error_on_change_email": "Se ha producido un error al actualizar la dirección de correo electrónico principal:",
   "subscriptions_title": "Suscripciones",
@@ -599,7 +599,7 @@
   "user_account_security_ip_restrictions_alt": "Restricción de acceso por IP",
   "user_account_title_infos": "Mi cuenta",
   "user_account_title_subscriptions": "Mis suscripciones",
-  "user_agreements_accepting": "En curso...",
+  "user_agreements_accepting": "Guardando...",
   "user_account_emails_title": "Mensajes recibidos",
   "user_account_title_dashboard": "Información general",
   "user_account_support_level_title": "Mi nivel de soporte",
