--- a/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_it_IT.json
@@ -32,7 +32,7 @@
   "user_account_spareemail_info": "È consigliato inserire un indirizzo email alternativo all'indirizzo precedente.",
   "user_account_customer_code": "Codice cliente",
   "user_account_cancel": "Annullare",
-  "user_account_OK": "Confermare",
+  "user_account_OK": "Salva le modifiche",
   "user_account_info_error": "Si è verificato un errore:",
   "user_account_info_error_on_change_email": "Si è verificato un errore durante l'aggiornamento dell'email principale:",
   "subscriptions_title": "Abbonamenti",
@@ -599,7 +599,7 @@
   "user_account_security_ip_restrictions_alt": "Restrizione degli accessi per IP",
   "user_account_title_infos": "Il mio account",
   "user_account_title_subscriptions": "I miei abbonamenti",
-  "user_agreements_accepting": "In corso...",
+  "user_agreements_accepting": "Registrazione in corso...",
   "user_account_emails_title": "Email ricevute",
   "user_account_title_dashboard": "Informazioni generali",
   "user_account_support_level_title": "Il mio livello di supporto",
