--- a/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_pt_PT.json
@@ -32,7 +32,7 @@
   "user_account_spareemail_info": "É aconselhável colocar um endereço de e-mail alternativo ao endereço anterior.",
   "user_account_customer_code": "Código cliente",
   "user_account_cancel": "Anular",
-  "user_account_OK": "Validar",
+  "user_account_OK": "Registar as modificações",
   "user_account_info_error": "Ocorreu um erro:",
   "user_account_info_error_on_change_email": "Ocorreu um erro aquando da atualização do e-mail principal:",
   "subscriptions_title": "Assinaturas",
@@ -599,7 +599,7 @@
   "user_account_security_ip_restrictions_alt": "Restrição de acesso por IP",
   "user_account_title_infos": "A minha conta",
   "user_account_title_subscriptions": "Subscrições",
-  "user_agreements_accepting": "Em curso...",
+  "user_agreements_accepting": "Registo em curso",
   "user_account_emails_title": "E-mails recebidos",
   "user_account_title_dashboard": "Informações gerais",
   "user_account_support_level_title": "O meu nível de suporte",
