--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_es_ES.json
@@ -6,9 +6,9 @@
   "signup_password_invalid": "debe contener al menos una cifra, una letra mayúscula y una minúscula, y tener 8 caracteres o más.",
   "signup_section_account": "Su cuenta",
   "signup_section_personal": "Datos personales",
-  "signup_section_contact": "Sus datos",
+  "signup_section_contact": "Datos de contacto",
   "signup_section_other": "Información adicional",
-  "signup_field_date_placeholder": "aaaa-mm-dd",
+  "signup_field_date_placeholder": "dd/mm/aaaa",
   "signup_field_date_calendar": "Elegir la fecha",
   "signup_field_legalform": "Tipo de cuenta",
   "signup_field_country": "País",
@@ -746,5 +746,18 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal"
+  "signup_enum_IN_area_IN-WB": "West Bengal",
+  "signup_section_identification": "Su identificación de cliente",
+  "signup_section_activity": "Actividad",
+  "signup_section_language": "Preferencias de idioma",
+  "signup_field_required_error": "Complete este campo.",
+  "signup_field_pattern_error": "Introduzca un formato válido.",
+  "signup_enum_managerLanguage_de_DE": "Alemán",
+  "signup_enum_managerLanguage_en_GB": "Inglés",
+  "signup_enum_managerLanguage_es_ES": "Español",
+  "signup_enum_managerLanguage_fr_FR": "Francés",
+  "signup_enum_managerLanguage_fr_CA": "Francés (Canadá)",
+  "signup_enum_managerLanguage_pl_PL": "Polaco",
+  "signup_enum_managerLanguage_it_IT": "Italiano",
+  "signup_enum_managerLanguage_pt_PT": "Portugués"
 }
