--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
@@ -6,9 +6,9 @@
   "signup_password_invalid": "Deve ter pelo menos um número, uma maiúscula e uma minúscula. E ter 8 ou mais caracteres.",
   "signup_section_account": "A sua conta",
   "signup_section_personal": "Informações pessoais",
-  "signup_section_contact": "Os seus dados",
+  "signup_section_contact": "Informações de contacto",
   "signup_section_other": "Informações complementares",
-  "signup_field_date_placeholder": "aaaa-mm-dd",
+  "signup_field_date_placeholder": "dd/mm/aaaa",
   "signup_field_date_calendar": "Escolher a data",
   "signup_field_legalform": "Tipo de conta",
   "signup_field_country": "País",
@@ -746,5 +746,18 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal"
+  "signup_enum_IN_area_IN-WB": "West Bengal",
+  "signup_section_identification": "ID de cliente",
+  "signup_section_activity": "Atividade",
+  "signup_section_language": "Informações de línguas",
+  "signup_field_required_error": "Preencha o campo.",
+  "signup_field_pattern_error": "Introduza um formato válido.",
+  "signup_enum_managerLanguage_de_DE": "Alemão",
+  "signup_enum_managerLanguage_en_GB": "Inglês",
+  "signup_enum_managerLanguage_es_ES": "Espanhol",
+  "signup_enum_managerLanguage_fr_FR": "Francês",
+  "signup_enum_managerLanguage_fr_CA": "Francês (Canadá)",
+  "signup_enum_managerLanguage_pl_PL": "Polaco",
+  "signup_enum_managerLanguage_it_IT": "Italiano ",
+  "signup_enum_managerLanguage_pt_PT": "Português"
 }
