--- a/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_de_DE.json
@@ -32,7 +32,7 @@
   "user_account_spareemail_info": "Es wird empfohlen, für die bereits eingegebene E-Mail-Adresse eine alternative Adresse einzutragen.",
   "user_account_customer_code": "Kundencode",
   "user_account_cancel": "Abbrechen",
-  "user_account_OK": "Bestätigen",
+  "user_account_OK": "Änderungen speichern",
   "user_account_info_error": "Es ist ein Fehler aufgetreten:",
   "user_account_info_error_on_change_email": "Bei der Änderung der Haupt-E-Mail-Adresse ist ein Fehler aufgetreten:",
   "subscriptions_title": "Abonnements",
@@ -599,7 +599,7 @@
   "user_account_security_ip_restrictions_alt": "Einschränkung des Zugangs nach IP",
   "user_account_title_infos": "Mein Account",
   "user_account_title_subscriptions": "Meine Abos",
-  "user_agreements_accepting": "Wird ausgeführt...",
+  "user_agreements_accepting": "Die Änderungen werden gespeichert",
   "user_account_emails_title": "Empfangene E-Mails",
   "user_account_title_dashboard": "Allgemeine Informationen",
   "user_account_support_level_title": "Mein Support-Level",
