--- a/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/translations/Messages_pl_PL.json
@@ -32,7 +32,7 @@
   "user_account_spareemail_info": "Zalecamy podanie alternatywnego adresu e-mail.",
   "user_account_customer_code": "Kod klienta",
   "user_account_cancel": "Anuluj",
-  "user_account_OK": "Zatwierdź",
+  "user_account_OK": "Zapisz zmiany",
   "user_account_info_error": "Wystąpił błąd:",
   "user_account_info_error_on_change_email": "Wystąpił błąd podczas aktualizacji głównego adresu e-mail:",
   "subscriptions_title": "Subskrypcje",
@@ -599,7 +599,7 @@
   "user_account_security_ip_restrictions_alt": "Ograniczenie dostępu przez IP",
   "user_account_title_infos": "Moje konto",
   "user_account_title_subscriptions": "Moje abonamenty",
-  "user_agreements_accepting": "W trakcie...",
+  "user_agreements_accepting": "Trwa zapisywanie",
   "user_account_emails_title": "Otrzymane e-maile",
   "user_account_title_dashboard": "Informacje ogólne",
   "user_account_support_level_title": "Mój poziom wsparcia",
