--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_en_GB.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_en_GB.json
@@ -31,5 +31,7 @@
   "siret_manual_company_legal_form_SCS": "Société en commandite simple (SCS)",
   "siret_manual_company_legal_form_SCA": "Société en commandite par actions (SCA)",
   "siret_manual_company_legal_form_SCOP": "Société coopérative de production (Scop)",
-  "siret_manual_registration_date": "Registration date"
+  "siret_manual_registration_date": "Registration date",
+  "siret_manual_registration_date_placeholder": "dd/mm/yyyy",
+  "siret_update_search_assistant": "Search Assistant"
 }
