--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_es_ES.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_es_ES.json
@@ -31,5 +31,7 @@
   "siret_manual_company_legal_form_SCS": "Sociedad en comandita simple (SCS)",
   "siret_manual_company_legal_form_SCA": "Sociedad en comandita por acciones (SCA)",
   "siret_manual_company_legal_form_SCOP": "Sociedad cooperativa de producción (SCOP)",
-  "siret_manual_registration_date": "Fecha de registro"
+  "siret_manual_registration_date": "Fecha de registro",
+  "siret_manual_registration_date_placeholder": "dd/mm/aaaa",
+  "siret_update_search_assistant": "Asistente de búsqueda"
 }
