--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_it_IT.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_it_IT.json
@@ -31,5 +31,7 @@
   "siret_manual_company_legal_form_SCS": "Società in accomandita semplice (SCS)",
   "siret_manual_company_legal_form_SCA": "Società in accomandita per azioni (SCA)",
   "siret_manual_company_legal_form_SCOP": "Cooperativa di produzione (Scop)",
-  "siret_manual_registration_date": "Data di immatricolazione"
+  "siret_manual_registration_date": "Data di immatricolazione",
+  "siret_manual_registration_date_placeholder": "gg/mm/aaaa",
+  "siret_update_search_assistant": "Assistente di ricerca"
 }
