--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_pt_PT.json
@@ -31,5 +31,7 @@
   "siret_manual_company_legal_form_SCS": "Société en commandite simple (SCS)",
   "siret_manual_company_legal_form_SCA": "Société en commandite par actions (SCA)",
   "siret_manual_company_legal_form_SCOP": "Société coopérative de production (Scop)",
-  "siret_manual_registration_date": "Data de registo"
+  "siret_manual_registration_date": "Data de registo",
+  "siret_manual_registration_date_placeholder": "dd/mm/aaaa",
+  "siret_update_search_assistant": "Assistente de pesquisa"
 }
