fix(i18n): add missing translations [CDS 2047]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>
Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
@@ -1376,5 +1376,7 @@
   "hosting_dashboard_tabs_dropdown": "More",
   "hosting_dashboard_service_datacenter_gra": "Gravelines",
   "hosting_dashboard_service_datacenter_gra3": "Gravelines 3",
-  "hosting_dashboard_service_datacenter_bhs": "Beauharnois"
+  "hosting_dashboard_service_datacenter_bhs": "Beauharnois",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_1": "The default installation directory is {{t0}}.",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_2": "Please select advanced mode to install it in another directory."
 }
