--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_de_DE.json
@@ -1376,5 +1376,7 @@
   "hosting_dashboard_tabs_dropdown": "Mehr",
   "hosting_dashboard_service_datacenter_gra": "Gravelines",
   "hosting_dashboard_service_datacenter_gra3": "Gravelines 3",
-  "hosting_dashboard_service_datacenter_bhs": "Beauharnois"
+  "hosting_dashboard_service_datacenter_bhs": "Beauharnois",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_1": "Das Standard-Installationsverzeichnis ist {{t0}}.",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_2": "Für die Installation in einem anderen Verzeichnis wählen Sie bitte den fortgeschrittenen Modus."
 }
