--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_it_IT.json
@@ -1376,5 +1376,7 @@
   "hosting_dashboard_tabs_dropdown": "Più",
   "hosting_dashboard_service_datacenter_gra": "Gravelines",
   "hosting_dashboard_service_datacenter_gra3": "Gravelines 3",
-  "hosting_dashboard_service_datacenter_bhs": "Beauharnois"
+  "hosting_dashboard_service_datacenter_bhs": "Beauharnois",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_1": "La directory di installazione predefinita è {{t0}}.",
+  "hosting_configuration_tab_modules_create_step1_module_default_path_part_2": "Seleziona la modalità avanzata per installarla in un'altra directory."
 }
